<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".presentation.MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/black"
        >
        <TextView
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:text=""
            android:textColor="@android:color/black"
            android:background="@color/white"
            android:textSize="20sp"
            android:gravity="bottom|end"
            />
        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:text=""
            android:textColor="@android:color/black"
            android:background="@color/white"
            android:textSize="26sp"
            android:gravity="end"
            android:ellipsize="start"
            android:singleLine="true"
            />
    </TableLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/black"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/btn_clear"
                style="@style/BtnAction"
                android:text="@string/btn_clear">
            </TextView>
            <TextView
                android:id="@+id/btn_open_bracket"
                style="@style/BtnAction"
                android:text="@string/btn_open_bracket">
            </TextView>

            <TextView
                android:id="@+id/btn_close_bracket"
                style="@style/BtnAction"
                android:text="@string/btn_close_bracket">
            </TextView>
            <TextView
                android:id="@+id/btn_back"
                style="@style/BtnAction"
                android:text="@string/btn_back">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/btn_7"
                style="@style/BntNumbers"
                android:text="@string/btn_7">
            </TextView>
            <TextView
                android:id="@+id/btn_8"
                style="@style/BntNumbers"
                android:text="@string/btn_8">
            </TextView>
            <TextView
                android:id="@+id/btn_9"
                style="@style/BntNumbers"
                android:text="@string/btn_9">
            </TextView>
            <TextView
                android:id="@+id/btn_share"
                style="@style/BtnAction"
                android:text="@string/btn_share">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/btn_4"
                style="@style/BntNumbers"
                android:text="@string/btn_4">
            </TextView>
            <TextView
                android:id="@+id/btn_5"
                style="@style/BntNumbers"
                android:text="@string/btn_5">
            </TextView>
            <TextView
                android:id="@+id/btn_6"
                style="@style/BntNumbers"
                android:text="@string/btn_6">
            </TextView>
            <TextView
                android:id="@+id/btn_multiply"
                style="@style/BtnAction"
                android:text="@string/btn_multiply">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/btn_1"
                style="@style/BntNumbers"
                android:text="@string/btn_1">
            </TextView>
            <TextView
                android:id="@+id/btn_2"
                style="@style/BntNumbers"
                android:text="@string/btn_2">
            </TextView>
            <TextView
                android:id="@+id/btn_3"
                style="@style/BntNumbers"
                android:text="@string/btn_3">
            </TextView>
            <TextView
                android:id="@+id/btn_minus"
                style="@style/BtnAction"
                android:text="@string/btn_minus">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/btn_0"
                style="@style/BntNumbers"
                android:text="@string/btn_0">
            </TextView>
            <TextView
                android:id="@+id/btn_dot"
                style="@style/BntNumbers"
                android:text="@string/btn_dot">
            </TextView>
            <TextView
                android:id="@+id/btn_answer"
                style="@style/BtnAction"
                android:text="@string/btn_answer">
            </TextView>
            <TextView
                android:id="@+id/btn_sum"
                style="@style/BtnAction"
                android:text="@string/btn_sum">
            </TextView>
        </TableRow>

    </TableLayout>


</LinearLayout>